# cnd-scrapper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  cnd_estadual.md  cnd_estadual.yml  cnd_municipal.yml  cnd_outras.yml  documentacao.yml  feature_request.yml
app/: app.py
app/core/: __init__.py  config.py  dependencies.py  logging.py  middleware.py  security.py  server_configs.py
app/exceptions/: __init__.py  decorators.py  errors.py  handler.py
app/router/: __init__.py  estadual.py  fgts.py  municipal.py  trabalhista.py
app/schemas/: __init__.py  errors.py  requests.py
app/services/: __init__.py  estadual.py  fgts.py  municipal.py  trabalhista.py
app/utils/: __init__.py  captcha_solver.py  pdf_handler.py
docs/: DESENVOLVIMENTO.md  README.md
