[project]
name = "cnd-scrapper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "2captcha-python>=2.0.7",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "reportlab>=4.5.1",
    "rich>=15.0.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.48.0",
]
